2005-10-22 Pierrick LE GALL

	* bug 173 fixed: due to phpBB user identifiers management, the
	method to find the next user identifier has changer to MAX+1.

	* improvement: information message when new user added

	* bug fixed: language item "Username" used instead of "login".
	
2005-10-20 chrisaga

	* bug 176 fixed: need a javascript to handle transparent PNG
	background in IE (tribute to Bob Osola
	http://homepage.ntlworld.com/bobosola/index.htm)

	* display: fixed another IE childselector bug in Categories
	Management admin page and improved display of this page in all
	browsers too.

2005-10-18 Pierrick LE GALL

	* bug 174 fixed: use_exif_mapping configuration parameter was not
	used to list database fields to update from EXIF values.

2005-10-18 Pierrick LE GALL

	* bug 172 fixed: crash when changing password with an external
	users table. The same kind of correction was also made in
	picture.php and register.php.

2005-10-18 Pierrick LE GALL

	* bug 159 and 166 fixed: parameter "options" for mail() function
	disabled by default.

2005-10-18 chrisaga

	* display : smaller font-size and, as requested, fonts more like 1.4

	* bug 165 fixed : La largeur par défaut en PIXELS pas en Kb

2005-10-18 chrisaga

	* display : in group_list.tpl - wrong form class, mixed html tags, ...

	* display : suppress bullets in admin->synchronize and checkbox under select

	* display : set standard font size to 12pt

2005-10-17 Pierrick LE GALL

	* improvement: use new function get_language_filepath in about.php
	(complement of bug 168 correction)
	
2005-10-17 Pierrick LE GALL

	* bug 154 fixed: "Calendar category, too precise dates". Bug came
	from the bigger precision of creation_date and available_date in
	images tables. Need to retrieve only the year-month-day
	information.
	
2005-10-17 volcom

	* new: history details by month,day
	
2005-10-15 Pierrick LE GALL

	* modification: localized labels in Administration>Pictures>Caddie
